# xpcs-baseline

./: README.md  TODO
lammps/: in.melt
script/: calc_scattering.py  detector.py
src/: CMakeLists.txt  complex.h  dft.cpp  gpu_dft.cu  mdscatter.h  pydft.cpp
xpcs/: animate.py  calc_gisaxs.py  calc_scattering.py  detector.py  fresnel.py  loader.py
